# bftracks-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.toml
.github/workflows/: release.yml  rust.yml
src/: config.rs  install.rs  main.rs
